--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,26 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+*.png
+cipher.json
+ciphers
+ppmi_embeddings
+glove_embeddings
+mono
+mono_embeddings
+input
+output
+output_new
+output_val
+quegpatte_validation
+validation_ciphers
+ciphers_copy
+ciphers_train
+ciphers_test
+cuml_svc_vowels_consonants.joblib
+cuml_svc_vowels_consonants_ppmi.joblib
+.vscode
+vocab
+monociphers
+monociphers_embeddings
