generate embeddings & plot_embeddings

--- a/.gitignore
+++ b/.gitignore
@@ -222,6 +222,7 @@ validation_ciphers
 ciphers_copy
 ciphers_train
 ciphers_test
+cipherstwo
 cuml_svc_vowels_consonants.joblib
 cuml_svc_vowels_consonants_ppmi.joblib
 .vscode
