--- a/.gitignore
+++ b/.gitignore
@@ -206,26 +206,18 @@ marimo/_static/
 marimo/_lsp/
 __marimo__/
 
+.vscode
 *.png
 cipher.json
 ciphers
-ppmi_embeddings
-glove_embeddings
-mono
-mono_embeddings
 input
 output
 output_new
 output_val
-quegpatte_validation
 validation_ciphers
-ciphers_copy
 ciphers_train
 ciphers_test
 cipherstwo
 cuml_svc_vowels_consonants.joblib
 cuml_svc_vowels_consonants_ppmi.joblib
-.vscode
-vocab
-monociphers
-monociphers_embeddings
+embeddings_plain_cipher
