--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,3 +11,9 @@ dependencies = [
     "pandas>=2.3.3",
     "scikit-learn>=1.7.2",
 ]
+
+[dependency-groups]
+dev = [
+    "pytest>=9.0.1",
+    "pytest-mock>=3.15.1",
+]
