gpu hyperparam tuning

--- a/.gitignore
+++ b/.gitignore
@@ -213,3 +213,20 @@ ciphers_train
 ciphers_test
 *.joblib
 embeddings_plain_cipher
+test_ciphers
+train_ciphers
+ppmi_embeddings_plain_cipher
+glove_embeddings_plain_cipher
+train_ciphers_50k
+train_ciphers_100k
+train_ciphers_50k_new
+train_ciphers_100k_new
+test_ciphers_1k
+ciphers_train_100k
+ciphers_train_50k
+ciphers_train_100k_new
+ciphers_train_50k_new
+ciphers_test_1k
+ciphers_test_400-800-25-30
+train_ciphers_75k
+ciphers_train_75k
